k8s/apps/divination-download-counter/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment

spec:
  replicas: 1
  selector:
    matchLabels:
      app: default
  template:
    metadata:
      annotations:
        fluentbit.io/exclude: "true"
      labels:
        app: default
    spec:
      containers:
        - name: app
          image: ghcr.io/slashnephy/divination-download-counter:master@sha256:1f93a2b309c041832ed99b1d5032cf623636d2e6173650187be04bae6ce2c08f
          securityContext:
            allowPrivilegeEscalation: false
        - name: database
          image: postgres:15.2-bullseye@sha256:78a275d4c891f7b3a33d3f1a78eda9f1d744954d9e20122bfdc97cdda25cddaf
          ports:
            - containerPort: 5432
          securityContext:
            allowPrivilegeEscalation: false
      restartPolicy: Always
