k8s/apps/divination-download-counter/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service

spec:
  selector:
    app: default
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: db

spec:
  selector:
    app: default
  ports:
    - name: "5432"
      port: 5432
      targetPort: 5432
